force-app/main/default/objects/User/fields/Associated_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Associated_Business_Unit__c</fullName>
    <description>This tells Business unit associated with a particular user</description>
    <inlineHelpText>Business unit associated with a particular user</inlineHelpText>
    <label>Associated Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Coal</fullName>
            </value>
            <value>
                <fullName>Equipment Planning</fullName>
            </value>
            <value>
                <fullName>Industrial Development</fullName>
            </value>
            <value>
                <fullName>Industrial Products</fullName>
            </value>
            <value>
                <fullName>Intermodal</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Marketing Research &amp; Forecasting</fullName>
            </value>
            <value>
                <fullName>NPO</fullName>
            </value>
            <value>
                <fullName>OSS</fullName>
            </value>
            <value>
                <fullName>Revenue Accounting</fullName>
            </value>
            <value>
                <fullName>Revenue Waybilling</fullName>
            </value>
            <value>
                <fullName>Unit Train</fullName>
            </value>
            <value>
                <fullName>NS Real Estate</fullName>
            </value>
            <value>
                <fullName>Human Resources</fullName>
            </value>
            <value>
                <fullName>Information Technology</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>