force-app/main/default/objects/User/fields/Crown_User__c.field-meta.xml
<CustomField>
    <fullName>Crown_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>One subset of Intermodal users, Crown Users, do not use
the system.</description>
    <inlineHelpText>One subset of Intermodal users, Crown Users, do not use
the system.</inlineHelpText>
    <label>Crown User</label>
    <type>Checkbox</type>
</CustomField>