force-app/main/default/objects/User/fields/Department_Description__c.field-meta.xml
<CustomField>
    <fullName>Department_Description__c</fullName>
    <description>Norfolk Southern employee department description</description>
    <inlineHelpText>Norfolk Southern employee department description</inlineHelpText>
    <label>Department Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>