force-app/main/default/objects/User/fields/Manager_RACF__c.field-meta.xml
<CustomField>
    <fullName>Manager_RACF__c</fullName>
    <description>mgr racf</description>
    <label>Manager RACF</label>
    <length>5</length>
    <type>Text</type>
</CustomField>