force-app/main/default/objects/User/fields/NS_AssociatedBusinessUnitSegment__c.field-meta.xml
<CustomField>
    <fullName>NS_AssociatedBusinessUnitSegment__c</fullName>
    <description>This tells segment within the business unit associated to a particular user</description>
    <inlineHelpText>Segment within the business unit associated to a particular user</inlineHelpText>
    <label>Associated Business Unit Segment</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Associated_Business_Unit__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Traffic</fullName>
            </value>
            <value>
                <fullName>Demurrage</fullName>
            </value>
            <value>
                <fullName>Northern Region East</fullName>
                <label>OSS North</label>
            </value>
            <value>
                <fullName>Northern Region West</fullName>
                <label>OSS West</label>
            </value>
            <value>
                <fullName>Southern Region East</fullName>
                <label>OSS East</label>
            </value>
            <value>
                <fullName>Southern Region West</fullName>
                <label>OSS South</label>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Non-Premium</fullName>
            </value>
            <value>
                <fullName>Leadership</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>Revenue Protection</fullName>
            </value>
            <value>
                <fullName>Special Services</fullName>
            </value>
            <value>
                <fullName>Data Quality</fullName>
            </value>
            <value>
                <fullName>Clearances</fullName>
            </value>
            <value>
                <fullName>LSS</fullName>
            </value>
            <value>
                <fullName>Freight Claims</fullName>
            </value>
            <value>
                <fullName>Administrative</fullName>
            </value>
            <value>
                <fullName>eCommerce</fullName>
            </value>
            <value>
                <fullName>Northern Region East  </fullName>
                <isActive>false</isActive>
                <label>Northern Region East  </label>
            </value>
            <value>
                <fullName>Northern Region West  </fullName>
                <isActive>false</isActive>
                <label>Northern Region West  </label>
            </value>
            <value>
                <fullName>Southern Region East  </fullName>
                <isActive>false</isActive>
                <label>Southern Region East  </label>
            </value>
            <value>
                <fullName>Southern Region West </fullName>
                <isActive>false</isActive>
                <label>Southern Region West </label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>