force-app/main/default/objects/User/fields/NS_Context_User__c.field-meta.xml
<CustomField>
    <fullName>NS_Context_User__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>To identify any users that are created as Context Users</inlineHelpText>
    <label>Context User</label>
    <type>Checkbox</type>
</CustomField>