force-app/main/default/objects/User/fields/NS_Primary_Queue__c.field-meta.xml
<CustomField>
    <fullName>NS_Primary_Queue__c</fullName>
    <inlineHelpText>Users needs to select a queue as primary queue only if they are already present in that Queue</inlineHelpText>
    <label>Primary Queue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automotive - Bad Order</fullName>
            </value>
            <value>
                <fullName>Automotive - Empties</fullName>
            </value>
            <value>
                <fullName>Automotive - Loads</fullName>
            </value>
            <value>
                <fullName>Automotive - Parts</fullName>
            </value>
            <value>
                <fullName>Business Unit</fullName>
            </value>
            <value>
                <fullName>Clearances</fullName>
            </value>
            <value>
                <fullName>CLPS</fullName>
            </value>
            <value>
                <fullName>Data Quality (DQ)</fullName>
            </value>
            <value>
                <fullName>Loading &amp; Securement Solutions (LSS)</fullName>
            </value>
            <value>
                <fullName>CS Help Desk</fullName>
            </value>
            <value>
                <fullName>OS Ancillary Services</fullName>
            </value>
            <value>
                <fullName>Special Services</fullName>
            </value>
            <value>
                <fullName>OSS Administrative</fullName>
            </value>
            <value>
                <fullName>Freight Claims</fullName>
            </value>
            <value>
                <fullName>eCommerce</fullName>
            </value>
            <value>
                <fullName>OSS Leadership</fullName>
            </value>
            <value>
                <fullName>Coal - Utility</fullName>
            </value>
            <value>
                <fullName>Coal - Met/Ex</fullName>
            </value>
            <value>
                <fullName>EP - Auto Parts Boxcars</fullName>
            </value>
            <value>
                <fullName>EP - Boxcars</fullName>
            </value>
            <value>
                <fullName>EP - Fleet Quality</fullName>
            </value>
            <value>
                <fullName>EP - Hoppers</fullName>
            </value>
            <value>
                <fullName>EP - Metals</fullName>
            </value>
            <value>
                <fullName>EP - Private Cars</fullName>
            </value>
            <value>
                <fullName>OSS North</fullName>
            </value>
            <value>
                <fullName>OSS West</fullName>
            </value>
            <value>
                <fullName>OSS East</fullName>
            </value>
            <value>
                <fullName>OSS East Manager</fullName>
            </value>
            <value>
                <fullName>OSS South</fullName>
            </value>
            <value>
                <fullName>OS Southern Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>