force-app/main/default/objects/User/fields/NS_User_Detail__c.field-meta.xml
<CustomField>
    <fullName>NS_User_Detail__c</fullName>
    <formula>FirstName &amp; &quot; &quot; &amp; LastName &amp; &quot; (&quot;&amp;   TEXT(Associated_Business_Unit__c) &amp;&quot;)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NS User Detail</label>
    <type>Text</type>
</CustomField>