force-app/main/default/objects/User/fields/NS_UserRoleOverride__c.field-meta.xml
<CustomField>
    <fullName>NS_UserRoleOverride__c</fullName>
    <defaultValue>false</defaultValue>
    <label>User Role Override</label>
    <type>Checkbox</type>
</CustomField>