force-app/main/default/objects/User/fields/NSSales_Role_Level__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Role_Level__c</fullName>
    <label>Role Level</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>