force-app/main/default/objects/User/fields/NSSales_RoleName__c.field-meta.xml
<CustomField>
    <fullName>NSSales_RoleName__c</fullName>
    <label>RoleName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>