force-app/main/default/objects/User/fields/NSSales_TimeDelta__c.field-meta.xml
<CustomField>
    <fullName>NSSales_TimeDelta__c</fullName>
    <label>Time Delta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>