force-app/main/default/objects/User/fields/Orgunit_Description__c.field-meta.xml
<CustomField>
    <fullName>Orgunit_Description__c</fullName>
    <description>NS employee organization unit description</description>
    <label>Orgunit Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>