force-app/main/default/objects/User/fields/Orgunit_Number__c.field-meta.xml
<CustomField>
    <fullName>Orgunit_Number__c</fullName>
    <label>Orgunit Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>