force-app/main/default/objects/User/listViews/UAT_Train_the_Trainer_Users.listView-meta.xml
<ListView>
    <fullName>UAT_Train_the_Trainer_Users</fullName>
    <booleanFilter>(1 AND 2) or (3)</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>5/6/2019 12:00 AM</value>
    </filters>
    <filters>
        <field>CORE.USERS.COMMUNITY_NICKNAME</field>
        <operation>equals</operation>
        <value>krista.mcclure</value>
    </filters>
    <label>UAT Train the Trainer Users</label>
</ListView>