force-app/main/default/objects/User/listViews/Users_with_RACIF.listView-meta.xml
<ListView>
    <fullName>Users_with_RACIF</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.SAML_SUBJECT</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Users with RACIF</label>
</ListView>